# HomeWorkProject

./: .env  README.md  pyproject.toml  user_settings.json
src/: config.py  function_operation_report.txt  logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_sevices.py  test_utils.py
